Updated for local use

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,2 @@
----
-title: Modeling Tiny Stars: Kickstarting fusion with electrons
+title: Capturing Nuclear Fusion with electrons
 theme: jekyll-theme-cayman
-# other options
----
