--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,6 @@
 title: Capturing Nuclear Fusion with electrons
 theme: jekyll-theme-cayman
 description: Making the world a better place
+
+github:
+  "is_project_page": false
