--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,9 @@
-title: Capturing Nuclear Fusion with electrons
+title: Modeling Mini Fusion Reactors
 theme: jekyll-theme-cayman
-description: Making the world a better place
+description: >
+  Jonathan Kelley <br>
+  North Carolina School of Science and Mathematics <br>
+  High School Research in Physics
 
 github:
   "is_project_page": false
